--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ If you are a rights holder and wish to request removal of any content, please co
   </div>
 
   <div class="game-container">
-    <canvas id="gameCanvas" width="900" height="2000"></canvas>
+    <canvas id="gameCanvas"></canvas>
     <div id="popup-container" style="
         position: absolute;
         top: 0; left: 0;
